Added char limit on "What I Do" section

--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,16 @@
   </header>
 
   <section class="what-i-do">
-    <h2>What I Do</h2>
-    <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is achieved by breaking down complicated problems into smaller, distinct issues and solving each separately.</p>
-    <p>I provide high quality, white glove service to all of my clients. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction. I want them to walk away confident that the work was done right.</p>
-    <p>My current role is on a team ensuring our mission-critical trading systems are running with zero downtime. In today's fast paced world global economy, clients need to be able to execute trades, anytime, anywhere. To acheive this, we are using some of the latest technologies, such as Apache Kafka, while moving some of our core applications to Microsoft's Azure cloud.</p>
-    <p>Recently started to perform more site reliability engineer (SRE) tasks, in that I am working to automate manual toil via python/shell scripts, automate ready for business (RFB) checks in tooks like Apica and Selenium, monitoring SLI/SLO's via products such as AppDynamics, Prometheus and Grafana.</p>
+    <div class="char-limit">
+      <h2>What I Do</h2>
+      <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is achieved by breaking down complicated problems into smaller, distinct issues and solving each separately.</p>
+      <p>I provide high quality, white glove service to all of my clients. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction. I want them to walk away confident that the work was done right.</p>
+      <p>My current role is on a team ensuring our mission-critical trading systems are running with zero downtime. In today's fast paced world global economy, clients need to be able to execute trades, anytime, anywhere. To acheive this, we are using some of the latest technologies, such as Apache Kafka, while moving some of our core applications to Microsoft's Azure cloud.</p>
+      <p>Recently started to perform more site reliability engineer (SRE) tasks, in that I am working to automate manual toil via python/shell scripts, automate ready for business (RFB) checks in tooks like Apica and Selenium, monitoring SLI/SLO's via products such as AppDynamics, Prometheus and Grafana.</p>
+    </div>
+  </section>
 
-
+  <section class="highlights">
     <h3>Highlights</h3>
       <ul class="experience">
         <li><em>18</em> years experience working in technology at a Fortune 500 financial service company.</li>
@@ -49,7 +52,9 @@
         <li><em>30<span class="suffix">%</span></em>decrease in manual tasks / toil due to automation.</li>
         <li><em>17<span class="suffix">%</span></em>decrease in support tickets due to effective problem management.</li>
       </ul>
+  </section>
 
+  <section class="skill">
     <h3>Skills</h3>
     <h4>Technical Skills</h4>
     <ul class="skills">
@@ -91,7 +96,7 @@
       <li>Disaster Recovery</li>
       <li>Capacity Management</li>
     </ul>
-    </section>
+  </section>
 
 
 
