--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,25 @@
         alt="WestJet Magazine May 2017 Cover">
     </a>
   </aside>
+
+  <footer class="footer">
+    <div>Made with &heart; in NY</div>
+    <div>&nbsp;</div>
+    <div class="contact">
+      <form action="#" method="post" class="contact-form">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" placeholder="John Doe">
+
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="john@doe.com">
+        
+        <label for="message">Message</label>
+        <textarea name="message" id="message" cols="30" rows="6"></textarea>
+
+        <button class="btn btn-cta" type="submit">Send Message</button>
+      </form>
+    </div>
+  </footer>
     
 
 </body>
