removed WIP in title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
   <head>
-    <title>Brett Baisley - Work In Progress</title>
+    <title>Brett Baisley</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="This is the personal website of Brett Baisley. A software/support engineer that is currently learning the latest in web design.">
