Updated meta tags only

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <title>Brett Baisley</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="This is the personal website of Brett Baisley. A software/support engineer that is currently learning the latest in web design.">
+    <meta name="description" content="Check out my personal website. This is a hobby/portfolio site, in that I intend to test some of the latest web technologies here, while highlighting some of my work experience and personal interests.">
+    <meta name="keywords" content="Brett, Baisley, person site, responsive, sre, site reliability entineer, react, javascript, html, css, hobbies, portfolio"/>
+    <meta name="author" content="Brett Baisley" />
+    <meta name="copyright" content="Brett Baisley" />
+    <meta name=”robots” content="index, nofollow"> 
+    <link rel="canonical" href="https://brettbaisley.com/" />
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,15 +23,6 @@
   </head>
   
 <body>
-
-    <!--
-      <nav role="navigation" aria-label="Main Menu">
-        <ul class="navbar">
-          <li><a href="#">Link</li>
-        </ul>
-      </nav>
-    -->
-
   <header class="section hero">
     <h1>Hello, I'm&nbsp;Brett.</h1>
     <h2>Site Reliability Engineer</h2>
