--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,13 @@
   </head>
   
 <body>
-  <header class="section hero">
+  <header class="section hero" id="header">
     <h1>Hello, I'm&nbsp;Brett.</h1>
     <h2>Site Reliability Engineer</h2>
     <p>Something catchy will go here, when I think of it...</p>
   </header>
 
-  <section class="what-i-do">
+  <section class="what-i-do" id="what-i-do">
     <div class="char-limit">
       <h2>What I Do</h2>
       <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is achieved by breaking down complicated problems into smaller, distinct issues and solving each separately.</p>
@@ -46,7 +46,7 @@
     </div>
   </section>
 
-  <section class="highlights">
+  <section class="highlights" id="highlights">
     <h3>Highlights</h3>
       <ul class="experience">
         <li><em>18</em> years experience working in technology at a Fortune 500 financial service company.</li>
@@ -57,7 +57,7 @@
       </ul>
   </section>
 
-  <section class="skill">
+  <section class="skill" id="skills">
     <h3>Skills</h3>
     <h4>Technical Skills</h4>
     <ul class="skills">
@@ -109,7 +109,7 @@
   </aside>
 
 
-  <section class="history">
+  <section class="history" id="history">
     <h2>Brief History</h2>
       <h3>1990's - How IT All Began</h3>
       <ul class="about-decade">
@@ -176,7 +176,13 @@
   </aside>
 
   <footer class="footer">
-    <div></div>
+    <div class="footer-links">
+      <a href="#what-i-do">What I Do</a>
+      <a href="#highlights">Highlights</a>
+      <a href="#skills">Skills</a>
+      <a href="#history">History</a>
+      <a href="#header">Back to Top</a>
+    </div>
     <div>&nbsp;</div>
     <div class="contact">
       <form action="#" method="post" class="contact-form" id="contact-form">
