--- a/public/index.html
+++ b/public/index.html
@@ -71,9 +71,11 @@
       <li>Node.js</li>
       <li>Python</li>
       <li>Shell Scripting</li>
-      <li>SQL</li>
+      <li>SQL / Sybase / DB2</li>
       <li>Azure Cloud</li>
       <li>Git/GitHub</li>
+      <li>Bitbucket</li>
+      <li>JIRA</li>
       <li>Selenium</li>
       <li>Splunk</li>
       <li>Prometheus</li>
@@ -82,6 +84,7 @@
       <li>AppDynamics</li>
       <li>Kafka</li>
       <li>Autosys</li>
+      <li>ServiceNow</li>
     </ul>
     
     <h4>Soft Skills</h4>
@@ -89,7 +92,7 @@
       <li>Agile</li>
       <li>DevOps</li>
       <li>SRE</li>
-      <li>ITIL Fundamentals</li>
+      <li>ITIL</li>
       <li>Problem Solving</li>
       <li>Automation</li>
       <li>TOIL Reduction</li>
