--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Brett Baisley" />
     <meta name="copyright" content="Brett Baisley" />
     <meta name=”robots” content="index, nofollow"> 
-    <link rel="canonical" href="https://brettbaisley.com/" />
+    <link rel="canonical" href="https://www.brettbaisley.com/" />
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicons -->
