Make resume link a download link

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 
   <aside class="aside resume">
     <span>Save or print my resume.</span>
-    <a class="btn btn-cta" href="assets/brett-baisley-resume.docx"><i class="fal fa-file-word"></i>Resume</a>
+    <a class="btn btn-cta" download href="assets/brett-baisley-resume.docx"><i class="fal fa-file-word"></i>Resume</a>
   </aside>
 
 
