--- a/public/index.html
+++ b/public/index.html
@@ -180,6 +180,7 @@
 
   <footer class="footer">
     <div class="footer-links">
+      <h4>Navigation</h4>
       <a href="#what-i-do">What I Do</a>
       <a href="#highlights">Highlights</a>
       <a href="#skills">Skills</a>
@@ -200,7 +201,7 @@
         
         <p id="contact-form-status" hidden></p>
 
-        <button class="btn btn-cta" type="submit">Send Message</button>
+        <button id="submit" class="btn btn-cta" type="submit">Send Message</button>
       </form>
     </div>
   </footer>
