--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,9 @@
       <li>Node.js</li>
       <li>Python</li>
       <li>Shell Scripting</li>
-      <li>SQL / Sybase / DB2</li>
+      <li>SQL</li>
+      <li>Sybase</li>
+      <li>DB2</li>
       <li>Azure Cloud</li>
       <li>Git/GitHub</li>
       <li>Bitbucket</li>
