--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
   <section class="mystory" id="mystory">
     <h2>My Story</h2>
     <h3>1990's - How IT All Began</h3>
-    <ul class="about-decade">
+    <ul>
       <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
       <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
       <li><i class="fal fa-browser"></i>Created my frist websites using an Intel 386 PC.</li>
@@ -145,7 +145,7 @@
     </ul>
 
     <h3>2000's - Professional Development</h3>
-    <ul class="about-decade">
+    <ul>
       <li><i class="fa-light fa-graduation-cap"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
       <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
       <li><i class="fal fa-desktop"></i>Worked my way up to senior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
@@ -154,16 +154,16 @@
     </ul>
 
     <h3>2010's - Embracing Adulthood</h3>
-    <ul class="about-decade">
+    <ul>
       <li><i class="fal fa-rings-wedding"></i>Got married to my wife, Enerlise.</li>
       <li><i class="fal fa-house"></i>Bought our first house.</li>
       <li><i class="fal fa-child"></i>Became a first time father...</li>
-      <li><i class="fal fa-child"></i>...and again, 13 months later.</li>
+      <li><i class="fal fa-child"></i><i class="fal fa-child"></i>...and again, 13 months later.</li>
     </ul>
 
 
     <h3>2020's - Still Going Strong</h3>
-    <ul class="about-decade">
+    <ul>
       <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
       <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
       <li><i class="fa-brands fa-react"></i>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</li>
@@ -191,7 +191,7 @@
 
   <footer class="section flex-2 space-between">
     <div>
-      <h4>Navigation</h4>
+      <h2>Navigation</h2>
       <ul class="nav flex-column">
         <li><a href="#whatido">What I Do</a></li>
         <li><a href="#highlights">Highlights</a></li>
