--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,17 @@
   
 <body>
   <!-- Header with Navbar -->
-  <header id="top" class="site-header">
-    <h1>&lt;logo&gt;</h1>
-    <nav class="topnav">
-      <a href="#whatido">What I Do</a>
-      <a href="#highlights">Highlights</a>
-      <a href="#skills">Skills</a>
-      <a href="#mystory">My Story</a>
-      <a href="#contact">Contact</a>
+  <header id="top">
+    <nav class="navbar">
+      <h1>&lt;logo&gt;</h1>
+      <button class="menu-toggle" aria-expanded="false" aria-controls="navigation">Menu</button>
+      <ul id="navigation" class="navigation">
+        <li><a href="#whatido">What I Do</a></li>
+        <li><a href="#highlights">Highlights</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#mystory">My Story</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
