--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <header id="top">
     <nav class="navbar">
       <h1>&lt;logo&gt;</h1>
-      <button class="menu-toggle" aria-expanded="false" aria-controls="navigation">&#9776;</button>
+      <button class="menu-toggle" aria-expanded="false" aria-controls="navigation" type="button">&#9776;</button>
       <ul id="navigation" class="navigation">
         <li><a href="#whatido">What I Do</a></li>
         <li><a href="#highlights">Highlights</a></li>
