--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <!-- <script src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2BQTP5W95"></script>
     <script>
@@ -142,39 +141,38 @@
     <h2>My Story</h2>
     <h3>1990's - How IT All Began</h3>
     <ul>
-      <li><span class="material-symbols-outlined">joystick</span>Played video games on a Commodore 64.</li>
-      <li><span class="material-symbols-outlined">keyboard</span>Completed homework assignments on an Amiga 2000.</li>
-      <li><span class="material-symbols-outlined">web_asset</span>Created my frist websites using an Intel 386 PC.</li>
-      <li><span class="material-symbols-outlined">build</span>pent weekends repairing desktops for family and friends.</li>
-      <li><span class="material-symbols-outlined">newspaper</span>Worked after school as a front-end designer for the local newspaper.</li>
+      <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
+      <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
+      <li><i class="fal fa-browser"></i>Created my frist websites using an Intel 386 PC.</li>
+      <li><i class="fal fa-wrench"></i>Spent weekends repairing desktops for family and friends.</li>
+      <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
     </ul>
 
     <h3>2000's - Professional Development</h3>
     <ul>
-      <li><span class="material-symbols-outlined">school</span>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
-      <li><span class="material-symbols-outlined">location_on</span>Moved to Halifax, Nova Scotia.</li>
-      <li><span class="material-symbols-outlined">desktop_windows</span>Worked my way up to senior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
-      <li><span class="material-symbols-outlined">home_pin</span>Moved to New York City.</li>
-      <li><span class="material-symbols-outlined">laptop</span>Hired as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
+      <li><i class="fal fa-graduation-cap"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
+      <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
+      <li><i class="fal fa-desktop"></i>Worked my way up to senior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
+      <li><i class="fal fa-map-marker-alt"></i>Moved to New York City.</li>
+      <li><i class="fal fa-laptop-code"></i>Hired as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
     </ul>
 
     <h3>2010's - Embracing Adulthood</h3>
     <ul>
-      <li><span class="material-symbols-outlined">diamond</span>Got married to my wife, Enerlise.</li>
-      <li><span class="material-symbols-outlined">home</span>We bought our first house.</li>
-      <li><span class="material-symbols-outlined">child_care</span>Became a first time father...</li>
-      <li><span class="material-symbols-outlined">child_care</span>...and again, 13 months later.</li>
+      <li><i class="fal fa-rings-wedding"></i>Got married to my wife, Enerlise.</li>
+      <li><i class="fal fa-house"></i>We bought our first house.</li>
+      <li><i class="fal fa-child"></i>Became a first time father...</li>
+      <li><i class="fal fa-child"></i>...and again, 13 months later.</li>
     </ul>
 
 
     <h3>2020's - Still Going Strong</h3>
     <ul>
-      <li><span class="material-symbols-outlined">cycle</span>Moved to the Securities Lending support team.</li>
-      <li><span class="material-symbols-outlined">sanitizer</span>Spent a lot of time working from home due to COVID-19.</li>
-      <li><span class="material-symbols-outlined">code</span>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</li>
-      <li><span class="material-symbols-outlined">award_star</span>Earned a <a href="https://www.credly.com/badges/95adffd9-f4db-4ed8-8726-539b1576a993/public_url">SRE Practitioner</a> Credly badge.
-      </li>
-      <li><span class="material-symbols-outlined">cloud</span>Currently studying for an Azure certificate.</li>
+      <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
+      <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
+      <li><i class="fa-brands fa-react"></i>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</li>
+      <li><i class="fal fa-certificate"></i>Earned a <a href="https://www.credly.com/badges/95adffd9-f4db-4ed8-8726-539b1576a993/public_url">SRE Practitioner</a> Credly badge.</li>
+      <li><i class="fa-brands fa-microsoft"></i>Currently studying for an Azure certificate.</li>
     </ul>
   </section>
       
