--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
     <ul>
       <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
       <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
-      <li><i class="fal fa-browser"></i>Created my frist websites using an Intel 386 PC.</li>
+      <li><i class="fal fa-browser"></i>Created my first websites using an Intel 386 PC.</li>
       <li><i class="fal fa-wrench"></i>Spent weekends repairing desktops for family and friends.</li>
       <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
     </ul>
