Adds async to FontAwesome load

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <script src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
+    <script async src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2BQTP5W95"></script>
     <script>
