--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
       <p>I have a photo published in the <time date="2007-05-01">May 2017</time> issue of <em>WestJet Magazine</em>. Click the image to see!</p>
     </div>
     <a href="westjet-article.html">
-      <img srcset="images/westjet-mag-05-17-cover-200w.jpg 1x,
+      <img loading="lazy" srcset="images/westjet-mag-05-17-cover-200w.jpg 1x,
                 images/westjet-mag-05-17-cover-400w.jpg 2x,
                 images/westjet-mag-05-17-cover-600w.jpg 3x,
                 images/westjet-mag-05-17-cover-800w.jpg 4x"
