--- a/public/index.html
+++ b/public/index.html
@@ -207,10 +207,10 @@
     <div class="contact" id="contact">
       <form action="#" method="post" class="contact-form" id="contact-form">
         <label for="name">Name *</label>
-        <input type="text" name="name" id="name" placeholder="John Doe" required>
+        <input type="text" name="name" id="name" placeholder="John Doe" required autocomplete="given-name">
 
         <label for="email">Email *</label>
-        <input type="email" name="email" id="email" placeholder="john@doe.com" required>
+        <input type="email" name="email" id="email" placeholder="john@doe.com" required autocomplete="off">
         
         <label for="message">Message *</label>
         <textarea name="message" id="message" cols="30" rows="6" required></textarea>
