'anonymize_ip': true

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-F2BQTP5W95');
+      gtag('config', 'G-F2BQTP5W95', {'anonymize_ip': true});
     </script>
 
     <style>
