Working on new styles

--- a/public/index.html
+++ b/public/index.html
@@ -17,34 +17,21 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
     <script async src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2BQTP5W95"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-F2BQTP5W95', {'anonymize_ip': true});
-    </script>
-
-    <style>
-      
-    </style>
   </head>
   
 <body>
   <!-- Header with Navbar -->
   <header id="top">
     <nav class="navbar">
-      <h1>&lt;logo&gt;</h1>
+      <h1>Brett Baisley</h1>
       <button class="menu-toggle" aria-expanded="false" aria-controls="navigation" type="button">&#9776;</button>
       <ul id="navigation" class="navigation">
         <li><a href="#whatido">What I Do</a></li>
         <li><a href="#highlights">Highlights</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#mystory">My Story</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><button class="button is-primary">Contact Me</button></li>
       </ul>
     </nav>
   </header>
@@ -52,9 +39,10 @@
 
   <!-- Hero -->
   <section class="hero">
-    <h1>Hello, I'm&nbsp;Brett.</h1>
     <h2>Site Reliability Engineer</h2>
-    <p>Something catchy will go here, when I think of it...</p>
+    <h1>Hello, I'm&nbsp;Brett.</h1>
+    <p>Something catchy will go here, when I think of it... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti nihil, id tempore odio impedit in vitae non consequuntur labore quam?</p>
+    <button class="button is-primary" type="button">Learn More</button>
   </section>
 
 
