--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 
 
   <aside class="aside section flex-2">
-      <h2>What to know more?</h2>
+      <h2>Want to know more?</h2>
 
       <a href="assets/brett-baisley-resume.docx" download="assets/brett-baisley-resume.docx">
         <button class="button is-primary" type="button">Download My Resume</button>
