--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
   <section id="mystory">
     <h2>My Story</h2>
     <h3>1990's - How IT All Began</h3>
-    <ul class="no-list-style">
+    <ul class="no-list-style grid">
       <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
       <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
       <li><i class="fal fa-browser"></i>Created my first websites using an Intel 386 PC.</li>
@@ -134,7 +134,7 @@
     </ul>
 
     <h3>2000's - Professional Development</h3>
-    <ul class="no-list-style">
+    <ul class="no-list-style grid">
       <li><i class="fal fa-graduation-cap"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
       <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
       <li><i class="fal fa-desktop"></i>Worked my way up to senior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
@@ -143,7 +143,7 @@
     </ul>
 
     <h3>2010's - Embracing Adulthood</h3>
-    <ul class="no-list-style">
+    <ul class="no-list-style grid">
       <li><i class="fal fa-rings-wedding"></i>Got married to my wife, Enerlise.</li>
       <li><i class="fal fa-house"></i>We bought our first house.</li>
       <li><i class="fal fa-child"></i>Became a first time father...</li>
@@ -152,7 +152,7 @@
 
 
     <h3>2020's - Still Going Strong</h3>
-    <ul class="no-list-style">
+    <ul class="no-list-style grid">
       <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
       <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
       <li><i class="fa-brands fa-react"></i>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</li>
