--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
   <section id="skills">
     <h2>Skills</h2>
     <h3>Technical Skills</h3>
-    <ul class="no-list-style">
+    <ul class="no-list-style skills">
       <li>Windows</li>
       <li>Linux</li>
       <li>MacOS</li>
@@ -98,7 +98,7 @@
     </ul>
     
     <h3>Soft Skills</h3>
-    <ul class="no-list-style">
+    <ul class="no-list-style skills">
       <li>Agile</li>
       <li>DevOps</li>
       <li>SRE</li>
