--- a/public/index.html
+++ b/public/index.html
@@ -42,27 +42,27 @@
   <section class="hero" id="hero">
     <h2>Site Reliability Engineer</h2>
     <h1>Hello, I'm&nbsp;Brett.</h1>
-    <p>Something catchy will go here, when I think of it... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti nihil, id tempore odio impedit in vitae non consequuntur labore quam?</p>
+    <p>Turning Tech Headaches into High-Fives, One Script at a Time.</p>
     <button class="button is-primary" type="button">Learn More</button>
   </section>
 
 
   <section id="whatido">
-    <h2>What I Do</h2>
-    <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is achieved by breaking down complicated problems into smaller, distinct issues and solving each separately.</p>
-    <p>I provide high quality, white glove service to all of my clients. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction. I want them to walk away confident that the work was done right.</p>
-    <p>My current role is on a team ensuring our mission-critical trading systems are running with zero downtime. In today's fast paced world global economy, clients need to be able to execute trades, anytime, anywhere. To acheive this, we are using some of the latest technologies, such as Apache Kafka, while moving some of our core applications to Microsoft's Azure cloud.</p>
-    <p>Recently started to perform more site reliability engineer (SRE) tasks, in that I am working to automate manual toil via python/shell scripts, automate ready for business (RFB) checks in tooks like Apica and Selenium, monitoring SLI/SLO's via products such as AppDynamics, Prometheus and Grafana.</p>
+    <h2>Transforming Complexity into Simplicity</h2>
+    <p>With a deep background in software and support engineering, I specialize in crafting elegant solutions to complex challenges. By deconstructing intricate problems into manageable pieces, I ensure each aspect is tackled with precision, leading to efficient and effective outcomes.</p>
+    <p>I am dedicated to delivering top-tier, white-glove service, ensuring every client's needs are met swiftly, professionally, and to the highest standards. My goal is to leave you confident that the job was not only done but done right.</p>
+    <p>Currently, I'm part of a dynamic team maintaining mission-critical trading systems with zero downtime, empowering clients to execute trades seamlessly in the fast-paced global economy. We leverage cutting-edge technologies, including Apache Kafka and Microsoft Azure cloud, to keep operations running smoothly.</p>
+    <p>In my evolving role, I've taken on more Site Reliability Engineering (SRE) responsibilities, focusing on automating manual processes with Python and shell scripts, enhancing system reliability with RFB checks through Apica and Selenium, and monitoring performance metrics with tools like AppDynamics, Prometheus, and Grafana.</p>
   </section>
 
   <section id="highlights">
     <h2>Highlights</h2>
-      <ul>
-        <li><em>20</em> years experience working in technology at a Fortune 500 financial service company.</li>
-        <li><em>60<span class="suffix">+</span></em> applications supported, from authoring platform to securities lending trading systems.</li>
-        <li><em>33<span class="suffix">%</span></em> decrease in outages due to ongoing incident management.</li>
-        <li><em>30<span class="suffix">%</span></em> decrease in manual tasks / toil due to automation.</li>
-        <li><em>17<span class="suffix">%</span></em> decrease in support tickets due to effective problem management.</li>
+      <ul class="highlights">
+        <li><em>20 Years of Tech Mastery</em>: Leveraging two decades of experience at a Fortune 500 financial services giant to drive innovation and reliability.</li>
+        <li><em>60+ Critical Applications Supported</em>: From cutting-edge authoring platforms to high-stakes securities lending systems, ensuring seamless operations across a diverse tech landscape.</li>
+        <li><em>33% Fewer Outages</em>: Successfully reduced system outages by a third through proactive and ongoing incident management.</li>
+        <li><em>30% Less Manual Toil</em>: Slashed manual tasks by nearly a third with strategic automation, freeing up valuable time for innovation.</li>
+        <li><em>17% Drop in Support Tickets</em>: Achieved a significant reduction in support tickets through targeted problem management and root cause analysis.</li>
       </ul>
   </section>
 
@@ -109,7 +109,6 @@
       <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
       <li><i class="fa-brands fa-react"></i>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</li>
       <li><i class="fal fa-certificate"></i>Earned a <a href="https://www.credly.com/badges/95adffd9-f4db-4ed8-8726-539b1576a993/public_url">SRE Practitioner</a> Credly badge.</li>
-      <li><i class="fa-brands fa-microsoft"></i>Currently studying for an Azure certificate.</li>
     </ul>
   </section>
       
