--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,11 @@
   <section id="highlights">
     <h2>Highlights</h2>
       <ul class="highlights">
-        <li><em>20 Years of Tech Mastery</em>: Leveraging two decades of experience at a Fortune 500 financial services giant to drive innovation and reliability.</li>
-        <li><em>60+ Critical Applications Supported</em>: From cutting-edge authoring platforms to high-stakes securities lending systems, ensuring seamless operations across a diverse tech landscape.</li>
-        <li><em>33% Fewer Outages</em>: Successfully reduced system outages by a third through proactive and ongoing incident management.</li>
-        <li><em>30% Less Manual Toil</em>: Slashed manual tasks by nearly a third with strategic automation, freeing up valuable time for innovation.</li>
-        <li><em>17% Drop in Support Tickets</em>: Achieved a significant reduction in support tickets through targeted problem management and root cause analysis.</li>
+        <li><em>20 Years of Tech Mastery.</em> Leveraging two decades of experience at a Fortune 500 financial services giant to drive innovation and reliability.</li>
+        <li><em>60+ Critical Applications Supported.</em> From cutting-edge authoring platforms to high-stakes securities lending systems, ensuring seamless operations across a diverse tech landscape.</li>
+        <li><em>33% Fewer Outages.</em> Successfully reduced system outages by a third through proactive and ongoing incident management.</li>
+        <li><em>30% Less Manual Toil.</em> Slashed manual tasks by nearly a third with strategic automation, freeing up valuable time for innovation.</li>
+        <li><em>17% Drop in Support Tickets.</em> Achieved a significant reduction in support tickets through targeted problem management and root cause analysis.</li>
       </ul>
   </section>
 
