--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
       <ul id="navigation" class="navigation">
         <li><a href="#whatido">What I Do</a></li>
         <li><a href="#highlights">Highlights</a></li>
-        <li><a href="#skills">Skills</a></li>
         <li><a href="#mystory">My Story</a></li>
-        <li><button class="button is-primary">Contact Me</button></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact-form" class="button is-primary">Contact Me</a></li>
       </ul>
     </nav>
   </header>
@@ -43,7 +43,7 @@
     <h2>Site Reliability Engineer</h2>
     <h1>Hello, I'm&nbsp;Brett.</h1>
     <p>Turning Tech Headaches into High-Fives, One Script at a Time.</p>
-    <button class="button is-primary" type="button">Learn More</button>
+    <a href="#whatido" class="button is-primary">Learn More</a>
   </section>
 
 
@@ -180,8 +180,8 @@
       <ul class="navigation">
         <li><a href="#whatido">What I Do</a></li>
         <li><a href="#highlights">Highlights</a></li>
-        <li><a href="#skills">Skills</a></li>
         <li><a href="#mystory">My Story</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#top">Back to Top</a></li>
       </ul>
     </div>
