--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,6 @@
   <!-- Header with Navbar -->
   <header id="top" class="site-header">
     <h1 class="site-header-text">Brett Baisley</h1>
-    <nav class="site-navigation">
-      <!-- <button class="menu-toggle" aria-expanded="false" aria-controls="navigation" type="button">&#9776;</button> -->
-      <ul id="navigation" class="navigation">
-        <li><a href="#whatido">What I Do</a></li>
-        <li><a href="#highlights">Highlights</a></li>
-        <li><a href="#mystory">My Story</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact-form" class="button is-primary">Contact Me</a></li>
-      </ul>
-    </nav>
   </header>
 
 
@@ -43,7 +33,10 @@
     <h2>Site Reliability Engineer</h2>
     <h1>Hello, I'm&nbsp;Brett.</h1>
     <p>Turning Tech Headaches into High-Fives, One Script at a Time.</p>
-    <a href="#whatido" class="button is-primary">Learn More</a>
+    <div class="cta-buttons">
+      <a href="#contact-form" class="button is-primary">Contact Me</a>
+      <a href="#whatido" class="button is-secondary">Learn More</a>
+    </div>
   </section>
 
 
@@ -177,7 +170,7 @@
   <footer>
     <div>
       <h3>Navigation</h3>
-      <ul class="navigation">
+      <ul class="footer-navigation">
         <li><a href="#whatido">What I Do</a></li>
         <li><a href="#highlights">Highlights</a></li>
         <li><a href="#mystory">My Story</a></li>
@@ -188,6 +181,8 @@
 
 
     <form action="#" method="post" id="contact-form" class="contact-form">
+      <h3>Contact Me</h3>
+
       <label for="name">Name *</label>
       <input type="text" name="name" id="name" placeholder="John Doe" required autocomplete="given-name">
 
