Updated highlight stats

--- a/public/index.html
+++ b/public/index.html
@@ -49,12 +49,12 @@
   </section>
 
   <section id="highlights">
-    <h2>Highlights</h2>
+    <h2>Career Highlights</h2>
       <ul class="highlights-group">
-        <li><em>20</em> Years of experience</li>
-        <li><em>60+</em> Applications Supported</li>
-        <li><em>33%</em> Reduction of Outages</li>
-        <li><em>30% </em> Less Manual TOIL</li>
+        <li><em>20+</em>Years of experience</li>
+        <li><em>60+</em>Applications Supported</li>
+        <li><em>33%</em>Reduction of Outages</li>
+        <li><em>30%</em>TOIL Reduction</li>
       </ul>
   </section>
 
@@ -72,7 +72,6 @@
     <ul class="no-list-style grid">
       <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
       <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
-      <li><i class="fal fa-browser"></i>Created my first websites using an Intel 386 PC.</li>
       <li><i class="fal fa-wrench"></i>Spent weekends repairing desktops for family and friends.</li>
       <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
     </ul>
@@ -80,10 +79,9 @@
     <h3>2000's - Professional Development</h3>
     <ul class="no-list-style grid">
       <li><i class="fal fa-graduation-cap"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
-      <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
-      <li><i class="fal fa-desktop"></i>Worked my way up to senior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
-      <li><i class="fal fa-map-marker-alt"></i>Moved to New York City.</li>
-      <li><i class="fal fa-laptop-code"></i>Hired as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
+      <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia as a junior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
+      <li><i class="fal fa-desktop"></i>Promoted to senior consultant and team lead at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
+      <li><i class="fal fa-map-marker-alt"></i>Moved to New York City as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
     </ul>
 
     <h3>2010's - Embracing Adulthood</h3>
