Edited MyStory style

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
 
   <section id="whatido">
-    <h2>Transforming Complexity into Simplicity</h2>
+    <h2>Transforming&nbsp;Complexity into&nbsp;Simplicity</h2>
     <p>With a deep background in software and support engineering, I specialize in crafting elegant solutions to complex challenges. By deconstructing intricate problems into manageable pieces, I ensure each aspect is tackled with precision, leading to efficient and effective outcomes.</p>
     <p>I am dedicated to delivering top-tier, white-glove service, ensuring every client's needs are met swiftly, professionally, and to the highest standards. My goal is to leave you confident that the job was not only done but done right.</p>
     <p>Currently, I'm part of a dynamic team maintaining mission-critical trading systems with zero downtime, empowering clients to execute trades seamlessly in the fast-paced global economy. We leverage cutting-edge technologies, including Apache Kafka and Microsoft Azure cloud, to keep operations running smoothly.</p>
@@ -56,6 +56,20 @@
         <li><em>33%</em>Reduction of Outages</li>
         <li><em>30%</em>TOIL Reduction</li>
       </ul>
+  </section>
+
+  <section id="experience">
+    <h2>Experience</h2>
+    <ul class="experience-group">
+      <li><strong>2024 GenAI Hackathon Finalist:</strong> Developed an automation that leveraged a RAG chatbot to extract resolution steps from internal documentation and seamlessly integrated them into PagerDuty alerts, improving incident response efficiency.</li>
+      <li>Reduced manual toil by 30% by automating repetitive tasks in Python, working with development teams to prioritize bug fixes, and streamlined procedures.</li>
+      <li>Reduced incident ticket volumes by an average of 33% YOY by proactively identifying and fixing issues.</li>
+      <li>Prepared and presented monthly updates to senior management and development leads.</li>
+      <li>Wrote and maintained internal support documentation, including system architectures and issue resolutions.</li>
+      <li>Interviewed, hired and mentored junior engineers on our team while promoting use of best practices.</li>
+      <li>Actively engaged with cross-functional teams to advocate for developer-friendly solutions.</li>
+      <li>Conduct weekly code reviews and approve production changes to client-facing trading systems.</li>
+    </ul>
   </section>
 
   <aside>
@@ -95,8 +109,8 @@
 
     <h3>2020's - Still Going Strong</h3>
     <ul class="no-list-style grid">
-      <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
-      <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
+      <li><i class="fal fa-repeat">X</i>Moved to the Securities Lending support team.</li>
+      <li><i class="fal fa-house-user">X</i>Spent a lot of time working from home due to COVID-19.</li>
       <li><i class="fa-brands fa-react"></i>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</li>
       <li><i class="fal fa-certificate"></i>Earned a <a href="https://www.credly.com/badges/95adffd9-f4db-4ed8-8726-539b1576a993/public_url">SRE Practitioner</a> Credly badge.</li>
     </ul>
@@ -140,16 +154,19 @@
       <li>Splunk</li>
       <li>Prometheus</li>
       <li>Grafana</li>
+      <li>OpenTelemetry</li>
       <li>Apica</li>
       <li>AppDynamics</li>
       <li>Kafka</li>
       <li>Autosys</li>
       <li>ServiceNow</li>
+      <li>OpenAI</li>
     </ul>
     
     <h3>Soft Skills</h3>
     <ul class="no-list-style skills">
       <li>Agile</li>
+      <li>Analytical</li>
       <li>DevOps</li>
       <li>SRE</li>
       <li>ITIL</li>
@@ -170,6 +187,7 @@
       <ul class="footer-navigation">
         <li><a href="#whatido">What I Do</a></li>
         <li><a href="#highlights">Highlights</a></li>
+        <li><a href="#experience">Experience</a></li>
         <li><a href="#mystory">My Story</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#top">Back to Top</a></li>
