Edited MyStory style

--- a/public/index.html
+++ b/public/index.html
@@ -84,35 +84,35 @@
     <h2>My Story</h2>
     <h3>1990's - How IT All Began</h3>
     <ul class="no-list-style grid">
-      <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
-      <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
-      <li><i class="fal fa-wrench"></i>Spent weekends repairing desktops for family and friends.</li>
-      <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
+      <li><i class="fal fa-gamepad"></i><span>Played video games on a Commodore 64.</span></li>
+      <li><i class="fal fa-typewriter"></i><span>Completed homework assignments on an Amiga 2000.</span></li>
+      <li><i class="fal fa-wrench"></i><span>Spent weekends repairing desktops for family and friends.</span></li>
+      <li><i class="fal fa-newspaper"></i><span>Worked after school as a front-end designer for the local newspaper.</span></li>
     </ul>
 
     <h3>2000's - Professional Development</h3>
     <ul class="no-list-style grid">
-      <li><i class="fal fa-graduation-cap"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
-      <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia as a junior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
-      <li><i class="fal fa-desktop"></i>Promoted to senior consultant and team lead at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
-      <li><i class="fal fa-map-marker-alt"></i>Moved to New York City as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
+      <li><i class="fal fa-graduation-cap"></i><span>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</span></li>
+      <li><i class="fal fa-map-marker-alt"></i><span>Moved to Halifax, Nova Scotia as a junior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</span></li>
+      <li><i class="fal fa-desktop"></i><span>Promoted to senior consultant and team lead at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</span></li>
+      <li><i class="fal fa-map-marker-alt"></i><span>Moved to New York City as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</span></li>
     </ul>
 
     <h3>2010's - Embracing Adulthood</h3>
     <ul class="no-list-style grid">
-      <li><i class="fal fa-rings-wedding"></i>Got married to my wife, Enerlise.</li>
-      <li><i class="fal fa-house"></i>We bought our first house.</li>
-      <li><i class="fal fa-child"></i>Became a first time father...</li>
-      <li><i class="fal fa-child"></i>...and again, 13 months later.</li>
+      <li><i class="fal fa-rings-wedding"></i><span>Got married to my wife, Enerlise.</span></li>
+      <li><i class="fal fa-house"></i><span>We bought our first house.</span></li>
+      <li><i class="fal fa-child"></i><span>Became a first time father...</span></li>
+      <li><i class="fal fa-child"></i><span>...and again, 13 months later.</span></li>
     </ul>
 
 
     <h3>2020's - Still Going Strong</h3>
     <ul class="no-list-style grid">
-      <li><i class="fal fa-repeat">X</i>Moved to the Securities Lending support team.</li>
-      <li><i class="fal fa-house-user">X</i>Spent a lot of time working from home due to COVID-19.</li>
-      <li><i class="fa-brands fa-react"></i>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</li>
-      <li><i class="fal fa-certificate"></i>Earned a <a href="https://www.credly.com/badges/95adffd9-f4db-4ed8-8726-539b1576a993/public_url">SRE Practitioner</a> Credly badge.</li>
+      <li><i class="fal fa-repeat"></i><span>Moved to the Securities Lending support team.</span></li>
+      <li><i class="fal fa-house-user"></i><span>Spent a lot of time working from home due to COVID-19.</span></li>
+      <li><i class="fa-brands fa-react"></i><span>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</span></li>
+      <li><i class="fal fa-certificate"></i><span>Earned a <a href="https://www.credly.com/badges/95adffd9-f4db-4ed8-8726-539b1576a993/public_url">SRE Practitioner</a> Credly badge.</span></li>
     </ul>
   </section>
       
