Edited MyStory style

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,7 @@
   <section id="whatido">
     <h2>Transforming&nbsp;Complexity into&nbsp;Simplicity</h2>
     <p>With a deep background in software and support engineering, I specialize in crafting elegant solutions to complex challenges. By deconstructing intricate problems into manageable pieces, I ensure each aspect is tackled with precision, leading to efficient and effective outcomes.</p>
-    <p>I am dedicated to delivering top-tier, white-glove service, ensuring every client's needs are met swiftly, professionally, and to the highest standards. My goal is to leave you confident that the job was not only done but done right.</p>
-    <p>Currently, I'm part of a dynamic team maintaining mission-critical trading systems with zero downtime, empowering clients to execute trades seamlessly in the fast-paced global economy. We leverage cutting-edge technologies, including Apache Kafka and Microsoft Azure cloud, to keep operations running smoothly.</p>
-    <p>In my evolving role, I've taken on more Site Reliability Engineering (SRE) responsibilities, focusing on automating manual processes with Python and shell scripts, enhancing system reliability with RFB checks through Apica and Selenium, and monitoring performance metrics with tools like AppDynamics, Prometheus, and Grafana.</p>
+    <p>Passionate Site Reliability Engineer with strong communication skills and a proven track record of automating and streamlining processes to enhance platform reliability. Experienced in collaborating with diverse teams and engaging technical communities. Eager to leverage my technical expertise and advocacy skills to drive developer engagement and support open-source innovation.</p>
   </section>
 
   <section id="highlights">
