Edited MyStory style

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
 
   <section id="whatido">
-    <h2>Transforming&nbsp;Complexity into&nbsp;Simplicity</h2>
+    <h2>Transforming Complexity into Simplicity</h2>
     <p>With a deep background in software and support engineering, I specialize in crafting elegant solutions to complex challenges. By deconstructing intricate problems into manageable pieces, I ensure each aspect is tackled with precision, leading to efficient and effective outcomes.</p>
     <p>Passionate Site Reliability Engineer with strong communication skills and a proven track record of automating and streamlining processes to enhance platform reliability. Experienced in collaborating with diverse teams and engaging technical communities. Eager to leverage my technical expertise and advocacy skills to drive developer engagement and support open-source innovation.</p>
   </section>
